# plugins_rename-project

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  deps.bzl  external_plugin_deps.bzl  groups  project.config  rename-project_plugin_deps.lock.json
src/main/java/com/ericsson/gerrit/plugins/renameproject/: CannotRenameProjectException.java  Configuration.java  LockUnlockProject.java  Module.java  RenameCommand.java  RenameLog.java  RenameLogLayout.java  RenameOwnProjectCapability.java  RenameProject.java  RenameProjectCapability.java  SshModule.java
src/main/java/com/ericsson/gerrit/plugins/renameproject/cache/: CacheRenameHandler.java
src/main/java/com/ericsson/gerrit/plugins/renameproject/conditions/: RenamePreconditions.java
src/main/java/com/ericsson/gerrit/plugins/renameproject/database/: DatabaseRenameHandler.java  IndexUpdateHandler.java
src/main/java/com/ericsson/gerrit/plugins/renameproject/fs/: FilesystemRenameHandler.java
src/main/java/com/ericsson/gerrit/plugins/renameproject/monitor/: CommandProgressMonitor.java  NoopMonitor.java  ProgressMonitor.java
src/main/java/com/googlesource/gerrit/plugins/renameproject/: CannotRenameProjectException.java  Configuration.java  HttpClientProvider.java  HttpModule.java  HttpResponseHandler.java  HttpSession.java  LockUnlockProject.java  Module.java  ProjectDeletedEvent.java  RenameAction.java  RenameCommand.java  RenameException.java  RenameJsonLogLayout.java  RenameLog.java  RenameLogLayout.java  RenameOwnProjectCapability.java  RenameProject.java  RenameProjectCapability.java  RenameProjectFilter.java  RenameProjectHandler.java  RenameProjectServlet.java  RenameReplicationException.java  RenameReplicationSshSessionFactoryProvider.java  RenameRevertException.java  RestRenameReplicationModule.java  RevertRenameProject.java  SshHelper.java  SshModule.java
src/main/java/com/googlesource/gerrit/plugins/renameproject/cache/: CacheRenameHandler.java
src/main/resources/Documentation/: about.md  build.md  cmd-rename.md  config.md  rest-api-rename.md
src/test/: README.md
src/test/java/com/ericsson/gerrit/plugins/renameproject/: LockUnlockProjectTest.java  RenameIT.java  SubmoduleUtil.java
src/test/java/com/googlesource/gerrit/plugins/renameproject/: LockUnlockProjectTest.java  RenameIT.java  RenameProjectRevertTest.java  RenameProjectTest.java  RevertRenameProjectTest.java  SubmoduleUtil.java
tools/: workspace-status.sh  workspace_status.py
tools/eclipse/: BUILD  project.sh
tools/sonar/: sonar.sh
web/: .eslintrc.js  BUILD  gr-rename-repo.ts  plugin.ts  tsconfig.json
(+21 files in other folders)
